[project]
name = "networkx-importer"
version = "0.1.0"
description = "This tool converts networkx graphs into yaramo models."
authors = [
    {name = "Laura Rost",email = "git@laurarost.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "yaramo @ git+https://github.com/laugengebaeck/yaramo@yaramo2",
    "networkx (>=3.5,<4.0)"
]

[tool.poetry]
packages = [{include = "networkx_importer"}]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
black = "^25.1.0"
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pylint.format]
max-line-length = "100"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
